fixed code formatting